--- a/textbook-spa-frontend/styles.css
+++ b/textbook-spa-frontend/styles.css
@@ -15,6 +15,12 @@ body {
     margin: 0;
   }
 
+/* change to table format*/
+.school-list {
+  margin-left: 25px;
+  padding: 0;
+}
+
 .course {
   margin-left: 25px; 
   padding-left: 0;
