--- a/textbook-spa-frontend/styles.css
+++ b/textbook-spa-frontend/styles.css
@@ -64,3 +64,14 @@ body {
 .school-name-span {
   cursor: pointer;
 }
+
+.textbook {
+  color: red;
+}
+
+.add-text {
+  padding-bottom: 20px;
+  margin-right: 50px;
+  background-color: #624a72;
+  color: white;
+}
