add and style school delete button

--- a/textbook-spa-frontend/styles.css
+++ b/textbook-spa-frontend/styles.css
@@ -75,3 +75,9 @@ body {
   background-color: #624a72;
   color: white;
 }
+
+.delete-school-btn {
+  float: right;
+  margin-right: 450px;
+  display: none;
+}
